protótipo da splash screen & início da modularização

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="Theme.ChatFirebase" parent="android:Theme.Material.Light.NoActionBar" />
+    <!-- Tema com fundo transparente para a splash screen -->
+    <style name="Theme.ChatFirebase" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
 </resources>
